<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3d3d3b" >

    <ImageView
        android:id="@+id/profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/profession"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profession"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        

        <ImageView
            android:id="@+id/dobImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="image"
            android:src="@drawable/dob" />

        <TextView
            android:id="@+id/dobText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/dobText"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dob"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/homeImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="image"
            android:src="@drawable/home" />

        <TextView
            android:id="@+id/homeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/homeText"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/emailImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="emailImage"
            android:src="@drawable/email" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/emailText"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mobNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/mobImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="mobImage"
            android:src="@drawable/phone" />

        <TextView
            android:id="@+id/mobText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/mobText"
            
            
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/skype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobNo"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/skypeImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="image"
            android:src="@drawable/skype" />

        <TextView
            android:id="@+id/skypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/skypeText"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>